# eclipse-ditto-examples

./: .env  .env.example  .gitignore  README.md  cleanup-ditto.py  cleanup.py  poe.toml  pyproject.toml  python
docker/: README.md  docker-compose-e10-jwt.yml  docker-compose-e10-preauth.yml  docker-compose-ferret.yml  docker-compose-minimal.yml  docker-compose.yml  nginx.conf
docs/: RQL-best-practices.md  ditto-RQL.md
examples/1-device-state-sync/: README.md  policy.json  run.py  run_example.sh  thing.json
examples/10-direct-gateway-auth/: README.md  policy-jwt.json  policy-preauth.json  policy.json  run-jwt.py  run-preauth.py  run.py  thing-jwt.json  thing-preauth.json  thing.json
examples/2-remote-device-control/: README.md  policy.json  run.py  run_example.sh  thing.json
examples/3-digital-twin-enhancement/: README.md  policy.json  run.py  run_example.sh  thing.json
examples/4-outbox-pattern/: README.md  policy.json  run.py  run_example.sh  thing.json
examples/5-inbox-outbox-flow/: CONCEPT.md  README.md  connection.json  policy.json  run.py  run_example.sh  thing.json
examples/6-mqtt-connection/: README.md  connection_source.json  connection_target.json  policy.json  run.py  run_example.sh  sensor02.json
examples/7-fleet-management/: README.md  bulk_create_things.sh  policy.json  run.py  run_example.sh
examples/7-fleet-management/fleet/: sensor001.json  sensor002.json  sensor003.json  sensor004.json  sensor005.json  sensor006.json
examples/8-thing-search/: README.md  create_things.py  test_queries.py
examples/8-thing-search/queries/: camera-complex.json  camera.json
examples/8-thing-search/schema/: camera.json
examples/9-jwt-auth/: README.md  jwt_api_example.py  jwt_cognito_example.py  policy-cognito.json  policy.json
examples/9-python-client/: README.md  connection.json  connection_piggyback.json  ditto_operations.py  policy.json  thing.json
utils/: README.md  __init__.py  bulk_operations.py  config.py  data_generation.py  ditto_operations.py  http_client.py  load_env.sh  logging_utils.py  paths.py  perf.py  validation.py
